--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -13,6 +13,13 @@ jobs:
         - uses: hashicorp/setup-terraform@v3
           name: Setup Terraform
 
+        - name: Azure login
+          uses: azure/login@v1
+          with:
+            client-id: ${{ secrets.ARM_CLIENT_ID }}
+            tenant-id: ${{ secrets.ARM_TENANT_ID }}
+            subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
         - name: Terraform Init
           id: init
           run: terraform init
