--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -3,6 +3,10 @@ name: Terraform Apply
 on:
   workflow_dispatch:
 
+permissions:
+    id-token: write
+    contents: read
+
 jobs:
     apply:
         runs-on: ubuntu-latest
