--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -14,9 +14,6 @@ jobs:
         - uses: actions/checkout@v3
           name: Checkout source code
 
-        - uses: hashicorp/setup-terraform@v3
-          name: Setup Terraform
-
         - name: Azure login
           uses: azure/login@v1
           with:
@@ -24,11 +21,14 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+        - uses: hashicorp/setup-terraform@v3
+          name: Setup Terraform
+            
+        - uses: terraform-cache/terraform-cache@v1
+        
         - name: Terraform Init
           id: init
           run: terraform init
-        
-        - uses: terraform-cache/terraform-cache@v1
 
         - name: Terraform Validate
           id: validate
@@ -36,4 +36,28 @@ jobs:
         
         - name: Terraform Plan
           id: plan
-          run: terraform plan -no-color
+          run: terraform plan -no-color -out tfplan
+
+            # Create string output of Terraform Plan
+        - name: Create String Output
+          id: tf-plan-string
+          run: |
+            TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+            
+            delimiter="$(openssl rand -hex 8)"
+            echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+            echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+            echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+            echo "" >> $GITHUB_OUTPUT
+            echo '```terraform' >> $GITHUB_OUTPUT
+            echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+            echo '```' >> $GITHUB_OUTPUT
+            echo "</details>" >> $GITHUB_OUTPUT
+            echo "${delimiter}" >> $GITHUB_OUTPUT
+      
+        # Publish Terraform Plan as task summary
+        - name: Publish Terraform Plan to Task Summary
+          env:
+            SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
+          run: |
+            echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
