--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -1,4 +1,4 @@
-name: Terraform Apply
+name: Terraform Apply In 2 Steps
 
 on:
   workflow_dispatch:
@@ -7,8 +7,13 @@ permissions:
     id-token: write
     contents: read
 
+env:
+    ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+    ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+    ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+
 jobs:
-    apply:
+    terraform-plan:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v3
@@ -38,7 +43,13 @@ jobs:
           id: plan
           run: terraform plan -no-color -out tfplan
 
-            # Create string output of Terraform Plan
+        - name: Publish Terraform Plan
+          uses: actions/upload-artifact@v3
+          with:
+            name: tfplan
+            path: tfplan
+
+        # Create string output of Terraform Plan
         - name: Create String Output
           id: tf-plan-string
           run: |
@@ -61,3 +72,31 @@ jobs:
             SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
           run: |
             echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+  
+    terraform-apply:
+        name: 'Terraform Apply'
+        if: github.ref == 'refs/heads/main'
+        runs-on: ubuntu-latest
+        environment: dev
+        needs: [terraform-plan]
+        
+        steps:
+        - uses: actions/checkout@v3
+          name: Checkout source code
+
+        - uses: hashicorp/setup-terraform@v3
+          name: Setup Terraform
+            
+        - uses: terraform-cache/terraform-cache@v1
+        
+        - name: Terraform Init
+          id: init
+          run: terraform init
+
+        - name: Download Terraform Plan
+          uses: actions/download-artifact@v3
+          with:
+            name: tfplan
+
+        - name: Terraform Apply
+          run: terraform apply -auto-approve tfplan
