--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -2,15 +2,20 @@ name: Terraform Apply In 2 Steps
 
 on:
   workflow_dispatch:
+    inputs:
+      env:
+        description: Environment to Deploy
+        type: environment
+        required: true
 
 permissions:
     id-token: write
     contents: read
 
-env:
-    ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-    ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-    ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+# env:
+#     ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+#     ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+#     ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
 
 jobs:
     terraform-plan:
@@ -77,12 +82,19 @@ jobs:
         name: 'Terraform Apply'
         if: github.ref == 'refs/heads/main'
         runs-on: ubuntu-latest
-        environment: dev
+        environment: ${{ inputs.env }}
         needs: [terraform-plan]
         
         steps:
         - uses: actions/checkout@v3
           name: Checkout source code
+
+        - name: Azure login
+          uses: azure/login@v1
+          with:
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
         - uses: hashicorp/setup-terraform@v3
           name: Setup Terraform
