--- a/.github/workflows/tf-drift.yml
+++ b/.github/workflows/tf-drift.yml
@@ -31,10 +31,10 @@ jobs:
     - uses: actions/checkout@v3
       name: Checkout source code
 
-    - uses: hashicorp/setup-terraform@v3
+    - uses: hashicorp/setup-terraform@v2
       name: Setup Terraform
-        
-    - uses: terraform-cache/terraform-cache@v1
+      with:
+        terraform_wrapper: false
 
     - name: Terraform Init
       run: terraform init
