--- a/.github/workflows/tf-destroy.yml
+++ b/.github/workflows/tf-destroy.yml
@@ -8,7 +8,7 @@ permissions:
     contents: read
 
 jobs:
-    plan:
+    destroy:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v3
