--- a/.github/workflows/tf-drift.yml
+++ b/.github/workflows/tf-drift.yml
@@ -2,8 +2,8 @@ name: Terraform Configuration Drift Detection
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '* */10 * * *' # Each 10 mins
+  #schedule:
+  #  - cron: '* */10 * * *' # Each 10 mins
 
 #Special permissions required for OIDC authentication
 permissions:
